[tool.poetry]
name = "hw-19-1-3"
version = "0.1.0"
description = ""
authors = ["Анатолий Шаповалов <anatoly.shapovalov@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_19_1_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
